--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -67,7 +67,7 @@
 							<div class="blog_title">Latest news in the ‘18 community</div>
 							<div class="blog_meta">
 								<ul>
-									<li>By <a href="#">James Smith</a></li>
+									<li>By <a href="#">Prince Kabuika</a></li>
 									<li>In <a href="#">Community</a></li>
 									<li><a href="#">2 Comments</a></li>
 								</ul>
@@ -90,7 +90,7 @@
 							<div class="blog_title">New changes in our Church from 2018</div>
 							<div class="blog_meta">
 								<ul>
-									<li>By <a href="#">James Smith</a></li>
+									<li>By <a href="#">Prince Kabuika</a></li>
 									<li>In <a href="#">Community</a></li>
 									<li><a href="#">2 Comments</a></li>
 								</ul>
@@ -113,7 +113,7 @@
 							<div class="blog_title">How to have a beautiful wedding in our Church</div>
 							<div class="blog_meta">
 								<ul>
-									<li>By <a href="#">James Smith</a></li>
+									<li>By <a href="#">Prince Kabuika</a></li>
 									<li>In <a href="#">Community</a></li>
 									<li><a href="#">2 Comments</a></li>
 								</ul>
