--- a/views/ministries.ejs
+++ b/views/ministries.ejs
@@ -185,14 +185,14 @@
 							<!-- Pastors Slider Item -->
 							<div class="owl-item text-center pastors_item">
 								<div class="pastors_item_image"><img src="images/pastor_1.jpg" alt=""></div>
-								<div class="pastors_item_title">Michael Miths</div>
+								<div class="pastors_item_title">Prince Kabuika</div>
 								<div class="pastors_item_text">Lead Pastor</div>
 							</div>
 
 							<!-- Pastors Slider Item -->
 							<div class="owl-item text-center pastors_item">
 								<div class="pastors_item_image"><img src="images/pastor_2.jpg" alt=""></div>
-								<div class="pastors_item_title">William Jersy</div>
+								<div class="pastors_item_title">Prince Kabuika</div>
 								<div class="pastors_item_text">Pastor</div>
 							</div>
 
@@ -206,7 +206,7 @@
 							<!-- Pastors Slider Item -->
 							<div class="owl-item text-center pastors_item">
 								<div class="pastors_item_image"><img src="images/pastor_4.jpg" alt=""></div>
-								<div class="pastors_item_title">Julius Smith</div>
+								<div class="pastors_item_title">Prince Kabuika</div>
 								<div class="pastors_item_text">Pastor</div>
 							</div>
 
