--- a/views/sermons.ejs
+++ b/views/sermons.ejs
@@ -71,7 +71,7 @@
 					<div class="sermon_content">
 						<div class="sermon_title"><a href="sermon_single.html">Receive The Holy Spirit By Jesus Christ</a></div>
 						<ul class="sermon_list">
-							<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
+							<li>Sermon by: <a href="#">Pastor Prince Kabuika</a></li>
 							<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
 							<li>Date: <a href="#">Monday 11 March, 2018</a></li>
 						</ul>
@@ -117,7 +117,7 @@
 						<div class="sermon_content">
 							<div class="sermon_title"><a href="sermon_single.html">Receive The Holy Spirit By Jesus Christ</a></div>
 							<ul class="sermon_list">
-								<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
+								<li>Sermon by: <a href="#">Pastor Prince Kabuika</a></li>
 								<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
 								<li>Date: <a href="#">Monday 11 March, 2018</a></li>
 							</ul>
@@ -145,7 +145,7 @@
 						<div class="sermon_content">
 							<div class="sermon_title"><a href="sermon_single.html">Receive The Holy Spirit By Jesus Christ</a></div>
 							<ul class="sermon_list">
-								<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
+								<li>Sermon by: <a href="#">Pastor Prince Kabuika</a></li>
 								<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
 								<li>Date: <a href="#">Monday 11 March, 2018</a></li>
 							</ul>
@@ -173,7 +173,7 @@
 						<div class="sermon_content">
 							<div class="sermon_title"><a href="sermon_single.html">Receive The Holy Spirit By Jesus Christ</a></div>
 							<ul class="sermon_list">
-								<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
+								<li>Sermon by: <a href="#">Pastor Prince Kabuika</a></li>
 								<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
 								<li>Date: <a href="#">Monday 11 March, 2018</a></li>
 							</ul>
@@ -201,7 +201,7 @@
 						<div class="sermon_content">
 							<div class="sermon_title"><a href="sermon_single.html">Receive The Holy Spirit By Jesus Christ</a></div>
 							<ul class="sermon_list">
-								<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
+								<li>Sermon by: <a href="#">Pastor Prince Kabuika</a></li>
 								<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
 								<li>Date: <a href="#">Monday 11 March, 2018</a></li>
 							</ul>
@@ -239,7 +239,7 @@
 						<div class="sermon_content">
 							<div class="sermon_title">Receive The Holy Spirit By Jesus Christ</div>
 							<ul class="sermon_list">
-								<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
+								<li>Sermon by: <a href="#">Pastor Prince Kabuika</a></li>
 								<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
 								<li>Date: <a href="#">Monday 11 March, 2018</a></li>
 							</ul>
@@ -267,7 +267,7 @@
 						<div class="sermon_content">
 							<div class="sermon_title">Receive The Holy Spirit By Jesus Christ</div>
 							<ul class="sermon_list">
-								<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
+								<li>Sermon by: <a href="#">Pastor Prince Kabuika</a></li>
 								<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
 								<li>Date: <a href="#">Monday 11 March, 2018</a></li>
 							</ul>
