--- a/views/index.ejs
+++ b/views/index.ejs
@@ -142,7 +142,7 @@
 				<div class="col-lg-2 col-md-4 col-sm-6">
 					<div class="services_item text-center">
 						<div class="services_image"><img src="images/services_3.png" alt=""></div>
-						<div class="services_title">Confessions</div>
+						<div class="services_title">Prayers</div>
 					</div>
 				</div>
 
@@ -200,7 +200,7 @@
 					<div class="sermon_content">
 						<div class="sermon_title">Receive The Holy Spirit By Jesus Christ</div>
 						<ul class="sermon_list">
-							<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
+							<li>Sermon by: <a href="#">Pastor Prince Kabuika</a></li>
 							<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
 							<li>Date: <a href="#">Monday 11 March, 2018</a></li>
 						</ul>
