--- a/views/ministries.ejs
+++ b/views/ministries.ejs
@@ -199,7 +199,7 @@
 							<!-- Pastors Slider Item -->
 							<div class="owl-item text-center pastors_item">
 								<div class="pastors_item_image"><img src="images/pastor_3.jpg" alt=""></div>
-								<div class="pastors_item_title">Carl B. Oven</div>
+								<div class="pastors_item_title">Test Testing</div>
 								<div class="pastors_item_text">Pastor</div>
 							</div>
 
