--- a/views/partials/atlChurchGuiFooter.ejs
+++ b/views/partials/atlChurchGuiFooter.ejs
@@ -8,7 +8,7 @@
 						<div class="newsletter_title">Subscribe to our newsletter</div>
 						<div class="newsletter_form_container ml-lg-auto">
 							<form action="#" id="newsletter_form" class="newsletter_form">
-								<input type="email" class="newsletter_input" placeholder="Your email" required="required">
+								<input type="email" name="subscribeEmail" class="newsletter_input" placeholder="Your email" required="required">
 								<button id="newsletter_button" class="newsletter_button">Subscribe</button>
 							</form>
 						</div>
