remove timer on header

--- a/views/partials/atlChurchGuiHead.ejs
+++ b/views/partials/atlChurchGuiHead.ejs
@@ -68,7 +68,7 @@ Brows
 			<div class="container">
 				<div class="row">
 					<div class="col top_bar_content d-flex flex-row align-items-center justify-content-start">
-						<div class="event_timer">
+						<!--<div class="event_timer">
 							<span>Next Big Event:</span>
 							<ul class="timer">
 								<li class="d-inline-flex">
@@ -88,7 +88,7 @@ Brows
 									<div class="timer_unit">Seconds</div>
 								</li>
 							</ul>
-						</div>
+						</div>-->
 						
 						   <!--<div class="donations_button ml-auto button_testing">
 						     <blink>
