--- a/views/partials/atlChurchGuiHead.ejs
+++ b/views/partials/atlChurchGuiHead.ejs
@@ -95,7 +95,7 @@ Brows
 							<a href="/">Register for comunion</a>
 						     </blink>	
 						   </div>--> 
-						
+						<ttttt>dwd</ttttt>
 					</div>
 				</div>
 			</div>
