--- a/views/partials/atlChurchGuiHead.ejs
+++ b/views/partials/atlChurchGuiHead.ejs
@@ -94,7 +94,7 @@ Brows
 						     <blink>
 							<a href="/">Register for comunion</a>
 						     </blink>	
-						   </div>--> 
+						   </div>--> gggggggggggggg
 					</div>
 				</div>
 			</div>
